force-app/main/default/objects/Quality_Assurance_QA__c/Quality_Assurance_QA__c.object-meta.xml
<CustomObject>
    <description>Used for teams to conduct quality assurance of various processes and individual performance.</description>
    <label>Quality Assurance (QA)</label>
    <nameField>
        <label>QA Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Assurance (QA)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>