force-app/main/default/objects/Quality_Assurance_QA__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>OB_Archiver__ArchiveLog__c</referenceTo>
    <relationshipLabel>Quality Assurance (QA) (Activity)</relationshipLabel>
    <relationshipName>Quality_Assurance_QA1</relationshipName>
    <type>Lookup</type>
</CustomField>