force-app/main/default/objects/Quality_Assurance_QA__c/fields/Additional_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Additional_Assistance__c</fullName>
    <description>Was additional assistance offered?</description>
    <inlineHelpText>Was additional assistance offered?</inlineHelpText>
    <label>Additional Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>