force-app/main/default/objects/Quality_Assurance_QA__c/fields/Additional_Assistance_Score__c.field-meta.xml
<CustomField>
    <fullName>Additional_Assistance_Score__c</fullName>
    <description>5 Points if additional assistance is offered, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Additional_Assistance__c, &quot;Yes&quot;)||ISPICKVAL( Additional_Assistance__c, &quot;N/A&quot;),5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>5 Points if additional assistance is offered, 0 points if not.</inlineHelpText>
    <label>Additional Assistance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>