force-app/main/default/objects/Quality_Assurance_QA__c/fields/Alternative_End_Stages_Used_Accurately__c.field-meta.xml
<CustomField>
    <fullName>Alternative_End_Stages_Used_Accurately__c</fullName>
    <inlineHelpText>If applicable, were stages like Stall / No Start / On Hold / etc used correctly and documented accurately?</inlineHelpText>
    <label>Alternative End Stages Used Accurately?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>