force-app/main/default/objects/Quality_Assurance_QA__c/fields/Alternative_End_Stages_Used_Score__c.field-meta.xml
<CustomField>
    <fullName>Alternative_End_Stages_Used_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Alternative_End_Stages_Used_Accurately__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative End Stages Used Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>