force-app/main/default/objects/Quality_Assurance_QA__c/fields/Asked_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Review__c</fullName>
    <inlineHelpText>Did specialist ask for a review via phone or email (if contact has not been asked in the last 6 months?)</inlineHelpText>
    <label>Asked for Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>