force-app/main/default/objects/Quality_Assurance_QA__c/fields/Background_Noise_Present__c.field-meta.xml
<CustomField>
    <fullName>Background_Noise_Present__c</fullName>
    <inlineHelpText>Is background noise present on the specialist’s end</inlineHelpText>
    <label>Background Noise Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>