force-app/main/default/objects/Quality_Assurance_QA__c/fields/Box_folders_subfolders_created__c.field-meta.xml
<CustomField>
    <fullName>Box_folders_subfolders_created__c</fullName>
    <inlineHelpText>Does Client Box Folder contain all required folders and formatting?</inlineHelpText>
    <label>Box folders/subfolders created?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>