force-app/main/default/objects/Quality_Assurance_QA__c/fields/Box_folders_subfolders_created_Score__c.field-meta.xml
<CustomField>
    <fullName>Box_folders_subfolders_created_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Box_folders_subfolders_created__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box folders/subfolders created Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>