force-app/main/default/objects/Quality_Assurance_QA__c/fields/Calculated_Score__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Score__c</fullName>
    <label>Calculated Score</label>
    <summarizedField>QA_Question__c.Score__c</summarizedField>
    <summaryForeignKey>QA_Question__c.Quality_Assurance_QA__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>