force-app/main/default/objects/Quality_Assurance_QA__c/fields/Call_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_Checklist_Completed__c</fullName>
    <inlineHelpText>Did the RM complete the checklist?</inlineHelpText>
    <label>Call Checklist Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>