force-app/main/default/objects/Quality_Assurance_QA__c/fields/Call_Task__c.field-meta.xml
<CustomField>
    <fullName>Call_Task__c</fullName>
    <inlineHelpText>Reason for the call</inlineHelpText>
    <label>Call Reason</label>
    <type>TextArea</type>
</CustomField>