force-app/main/default/objects/Quality_Assurance_QA__c/fields/Case_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Role__c</fullName>
    <formula>Case__r.Owner:User.UserRole.Name</formula>
    <label>Case Owner Role</label>
    <type>Text</type>
</CustomField>