force-app/main/default/objects/Quality_Assurance_QA__c/fields/Client_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Client_Greeting__c</fullName>
    <description>Employee states their name and ask how we can help the caller, lead call.</description>
    <inlineHelpText>Did the representative use a proper greeting when answering the call?</inlineHelpText>
    <label>Client Greeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>