force-app/main/default/objects/Quality_Assurance_QA__c/fields/Client_Greeting_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Greeting_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Client_Greeting__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Greeting Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>