force-app/main/default/objects/Quality_Assurance_QA__c/fields/Closure_SLA__c.field-meta.xml
<CustomField>
    <fullName>Closure_SLA__c</fullName>
    <description>Was Closure SLA met for Case?</description>
    <inlineHelpText>Was Closure SLA met for Case?</inlineHelpText>
    <label>Closure SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>