force-app/main/default/objects/Quality_Assurance_QA__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Manager comments on QA</description>
    <inlineHelpText>Manager comments on QA</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>