force-app/main/default/objects/Quality_Assurance_QA__c/fields/Completed_Each_Owned_Step_w_in_SLA_Score__c.field-meta.xml
<CustomField>
    <fullName>Completed_Each_Owned_Step_w_in_SLA_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Completed_Each_Owned_Step_within_SLA__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Each Owned Step w/in SLA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>