force-app/main/default/objects/Quality_Assurance_QA__c/fields/Completed_Each_Owned_Step_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Completed_Each_Owned_Step_within_SLA__c</fullName>
    <inlineHelpText>Were SLAs met for all Project Tasks owned by Employee?</inlineHelpText>
    <label>Completed Each Owned Step within SLA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>