force-app/main/default/objects/Quality_Assurance_QA__c/fields/Completed_Within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Completed_Within_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Within SLA</label>
    <type>Checkbox</type>
</CustomField>