force-app/main/default/objects/Quality_Assurance_QA__c/fields/Comprehensive_Notes_Included__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Notes_Included__c</fullName>
    <inlineHelpText>If a call was received/made, are detailed notes present?</inlineHelpText>
    <label>Comprehensive Notes Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>