force-app/main/default/objects/Quality_Assurance_QA__c/fields/Comprehensive_Notes_Included_Score__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Notes_Included_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Comprehensive_Notes_Included__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comprehensive Notes Included Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>