force-app/main/default/objects/Quality_Assurance_QA__c/fields/Contact_Handling__c.field-meta.xml
<CustomField>
    <fullName>Contact_Handling__c</fullName>
    <description>Verifying Caller&apos;s Full Name, Confirm Company name, Confirm identity</description>
    <inlineHelpText>Did the representative follow the proper procedures when placing the customer on hold or transferring to another representative, if applicable? Moved seamlessly from beginning to end of call?</inlineHelpText>
    <label>Contact Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>