force-app/main/default/objects/Quality_Assurance_QA__c/fields/Contact_Handling_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Handling_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Contact_Handling__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Handling Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>