force-app/main/default/objects/Quality_Assurance_QA__c/fields/Controlled_Affiliated_Groups_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Affiliated_Groups_Addressed__c</fullName>
    <inlineHelpText>Has client been screened for controlled group or successor plan?</inlineHelpText>
    <label>Controlled/Affiliated Groups Addressed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>