force-app/main/default/objects/Quality_Assurance_QA__c/fields/Controlled_Affiliated_Groups_Score__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Affiliated_Groups_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Controlled_Affiliated_Groups_Addressed__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controlled/Affiliated Groups Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>