force-app/main/default/objects/Quality_Assurance_QA__c/fields/Conversion_5500_Info_Completed__c.field-meta.xml
<CustomField>
    <fullName>Conversion_5500_Info_Completed__c</fullName>
    <inlineHelpText>Did we complete all necessary items for Compliance to complete the 5500 for the first year that Ubiquity does their plan adminstration?</inlineHelpText>
    <label>Conversion 5500 Info Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>