force-app/main/default/objects/Quality_Assurance_QA__c/fields/Conversion_5500_Info_Completed_Score__c.field-meta.xml
<CustomField>
    <fullName>Conversion_5500_Info_Completed_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Conversion_5500_Info_Completed__c , &quot;No&quot;),0,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion 5500 Info Completed Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>