force-app/main/default/objects/Quality_Assurance_QA__c/fields/Conversion_Assets_Completed__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets_Completed__c</fullName>
    <label>Conversion Assets Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>