force-app/main/default/objects/Quality_Assurance_QA__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <description>Was the question answered correctly?</description>
    <inlineHelpText>Was the question answered correctly?</inlineHelpText>
    <label>Correct Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>