force-app/main/default/objects/Quality_Assurance_QA__c/fields/Correct_Answer_Score__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_Score__c</fullName>
    <description>10 Points for correct answer given, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Correct_Answer__c, &quot;Yes&quot;)||ISPICKVAL( Correct_Answer__c, &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Points for correct answer given, 0 points if not.</inlineHelpText>
    <label>Correct Answer Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>