force-app/main/default/objects/Quality_Assurance_QA__c/fields/Customer_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authentication__c</fullName>
    <inlineHelpText>Did the representative confirm the customers Personal Identifiable Information?</inlineHelpText>
    <label>Customer Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>