force-app/main/default/objects/Quality_Assurance_QA__c/fields/Customer_Mistreat_Auto_Fail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mistreat_Auto_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are examples of behaviors that are not aligned with our values and may harm the business. If a specialist chooses to engage in these types of behaviors, they may forfeit their good standing or potentially cause their own dismissal.</description>
    <inlineHelpText>These are examples of behaviors that are not aligned with our values and may harm the business. If a specialist chooses to engage in these types of behaviors, they may forfeit their good standing or potentially cause their own dismissal.</inlineHelpText>
    <label>Customer Mistreat/Auto-Fail</label>
    <type>Checkbox</type>
</CustomField>