force-app/main/default/objects/Quality_Assurance_QA__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date QA Conducted.</description>
    <inlineHelpText>Date QA Conducted.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>