force-app/main/default/objects/Quality_Assurance_QA__c/fields/Date_Fields_Complete_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Date_Fields_Complete_Match_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Date_Fields_Complete_Match_w_Paradigm__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Fields Complete, Match Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>