force-app/main/default/objects/Quality_Assurance_QA__c/fields/Date_Fields_Complete_Match_w_Paradigm__c.field-meta.xml
<CustomField>
    <fullName>Date_Fields_Complete_Match_w_Paradigm__c</fullName>
    <label>Date Fields Complete, Match w/ Paradigm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>