force-app/main/default/objects/Quality_Assurance_QA__c/fields/Date_Ticket_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Ticket_Resolved__c</fullName>
    <description>Date the case being QA&apos;d was closed</description>
    <formula>Case__r.ClosedDate</formula>
    <label>Date Ticket Resolved</label>
    <type>DateTime</type>
</CustomField>