force-app/main/default/objects/Quality_Assurance_QA__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department of User</description>
    <formula>Ubiquity_Employee__r.Department</formula>
    <inlineHelpText>Department of User</inlineHelpText>
    <label>Department</label>
    <type>Text</type>
</CustomField>