force-app/main/default/objects/Quality_Assurance_QA__c/fields/Department_Dyn__c.field-meta.xml
<CustomField>
    <fullName>Department_Dyn__c</fullName>
    <description>New department field for dynamic QA form.  Shares global value set with design and is editable.</description>
    <inlineHelpText>Required for QA Design</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Departments</valueSetName>
    </valueSet>
</CustomField>