force-app/main/default/objects/Quality_Assurance_QA__c/fields/Docs_Complete_in_Box_Score__c.field-meta.xml
<CustomField>
    <fullName>Docs_Complete_in_Box_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Docs_Complete_in_Box__c , &quot;No&quot;),0,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docs Complete in Box Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>