force-app/main/default/objects/Quality_Assurance_QA__c/fields/Docs_Complete_in_Paradigm__c.field-meta.xml
<CustomField>
    <fullName>Docs_Complete_in_Paradigm__c</fullName>
    <inlineHelpText>Were signed versions of all documents properly saved to Paradigm?</inlineHelpText>
    <label>Docs Complete in Paradigm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>