force-app/main/default/objects/Quality_Assurance_QA__c/fields/Documents_Received_and_Completed__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received_and_Completed__c</fullName>
    <inlineHelpText>Did we receive all required documents and reports from the client?</inlineHelpText>
    <label>Documents Received and Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>