force-app/main/default/objects/Quality_Assurance_QA__c/fields/Documents_Received_and_Completed_Score__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received_and_Completed_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Documents_Received_and_Completed__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documents Received and Completed Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>