force-app/main/default/objects/Quality_Assurance_QA__c/fields/Email_Template_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Score__c</fullName>
    <description>10 Points for correct email template(s) being used, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Email_Templates__c, &quot;Yes&quot;)||ISPICKVAL( Email_Templates__c, &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Points for correct email template(s) being used, 0 points if not.</inlineHelpText>
    <label>Email Template Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>