force-app/main/default/objects/Quality_Assurance_QA__c/fields/Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates__c</fullName>
    <description>Were appropriate email/chat template(s) used?</description>
    <inlineHelpText>Were appropriate email/chat template(s) used?</inlineHelpText>
    <label>Email/Chat Templates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>