force-app/main/default/objects/Quality_Assurance_QA__c/fields/First_Touch_SLA__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_SLA__c</fullName>
    <description>Was First Touch SLA met for Case?</description>
    <inlineHelpText>Was First Touch SLA met for Case?</inlineHelpText>
    <label>First Touch SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>