force-app/main/default/objects/Quality_Assurance_QA__c/fields/Follow_Up_Provided__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Provided__c</fullName>
    <label>Follow Up Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>