force-app/main/default/objects/Quality_Assurance_QA__c/fields/Follow_Up_Provided_Score__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Provided_Score__c</fullName>
    <formula>IF( ISPICKVAL( Follow_Up_Provided__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up Provided Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>