force-app/main/default/objects/Quality_Assurance_QA__c/fields/Grammar__c.field-meta.xml
<CustomField>
    <fullName>Grammar__c</fullName>
    <description>Was correct spelling and grammar used?</description>
    <inlineHelpText>Was correct spelling and grammar used?</inlineHelpText>
    <label>Grammar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>