force-app/main/default/objects/Quality_Assurance_QA__c/fields/Grammar_Score__c.field-meta.xml
<CustomField>
    <fullName>Grammar_Score__c</fullName>
    <description>10 Points for use of correct spelling and grammar, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Grammar__c, &quot;Yes&quot;)||ISPICKVAL( Grammar__c, &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Points for use of correct spelling and grammar, 0 points if not.</inlineHelpText>
    <label>Grammar Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>