force-app/main/default/objects/Quality_Assurance_QA__c/fields/Imp_QA_Score__c.field-meta.xml
<CustomField>
    <fullName>Imp_QA_Score__c</fullName>
    <formula>IF(  Implementation_Role__c =&quot;RM&quot;,

IF(OR(ISPICKVAL( Call_Checklist_Completed__c, &quot;Yes&quot;),ISPICKVAL( Call_Checklist_Completed__c, &quot;N/A&quot;)),0.20,0)+
IF(OR(ISPICKVAL(  Plan_Provisions__c , &quot;Yes&quot;),ISPICKVAL( Plan_Provisions__c , &quot;N/A&quot;)),0.20,0)+
IF(OR(ISPICKVAL( Implementation_Call_Notes__c, &quot;Yes&quot;),ISPICKVAL( Implementation_Call_Notes__c, &quot;N/A&quot;)),0.20,0)+
IF(OR(ISPICKVAL( Scheduling_Next_Stage_Calls__c	, &quot;Yes&quot;),ISPICKVAL( Scheduling_Next_Stage_Calls__c	, &quot;N/A&quot;)),0.20,0)+
IF(OR(ISPICKVAL( Outstanding_Items__c, &quot;Yes&quot;),ISPICKVAL( Outstanding_Items__c, &quot;N/A&quot;)),0.20,0)
,

IF(Completed_Within_SLA__c,0.33,0)+
IF(Implementation_Notes_Added__c,0.33,0)+
IF(SOP_Followed__c,0.34,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imp QA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>